--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
             
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/guystowingservice-10-22/">https://rank-fortress-digital-agency.github.io/guystowingservice-10-22/</a><br>
+                <a target="_bLank" href="http://guystowingservice-10-22.s3-website-us-east-1.amazonaws.com">http://guystowingservice-10-22.s3-website-us-east-1.amazonaws.com</a><br>
+                <a target="_bLank" href="https://precious-peony-b76a87.netlify.app/">https://precious-peony-b76a87.netlify.app/</a><br>
             </section>
 
         </div>
